<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        tools:context="com.srainbow.fragment.drawer.IntroduceFragment">

        <RelativeLayout android:id="@+id/introduce_title_llayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@color/colorPrimary">
            <ImageView android:id="@+id/introduce_backicon_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_back"/>
            <TextView android:id="@+id/introduce_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/introduce"
                android:textSize="25sp"
                android:textColor="#FFF"/>
        </RelativeLayout>
        <ImageView android:id="@+id/introduce_onpieceicon_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/ic_onepiece"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/introduce_title_llayout"/>
        <TextView android:id="@+id/introduce_introducetext_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/introduce_text"
            android:layout_below="@id/introduce_onpieceicon_iv"/>
        <TextView android:id="@+id/introduce_willgoon_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/introduce_introducetext_tv"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/introduce_text_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/introduce_willgoon_tv"
            android:layout_marginTop="15dp"
            android:text="@string/cannotwait"/>
        <include
            layout="@layout/smileicon_srainbowwords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_below="@id/introduce_willgoon_tv"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</ScrollView>
