<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/onlyloadpage_swiperefreshlayout_slayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar android:id="@+id/onlyloadpage_progressbar_pb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:indeterminate="false"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:indeterminateDrawable="@drawable/progressdialog_style"/>
            <LinearLayout android:id="@+id/onlyloadpage_loadfailed_llayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_centerInParent="true">
                <include layout="@layout/loadfailed_layout"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/onlyloadpage_recyclerview_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
    <ScrollView
        android:id="@+id/onlyloadpage_showbigpic_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:visibility="gone">
        <ImageView android:id="@+id/onlyloadpage_showbigpic_iv"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_smile"/>
    </ScrollView>
    <LinearLayout
        android:id="@+id/onlyloadpage_loadover_llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <TextView android:id="@+id/onlyloadpage_loadover_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorToolbarImg"
            android:text="@string/newsfornowover"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/onlyloadpage_loadmore_llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <TextView android:id="@+id/onlyloadpage_loadmore_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorToolbarImg"
            android:text="@string/loadmore"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/onlyloadpage_loading_llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <TextView android:id="@+id/onlyloadpage_loading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorToolbarImg"
            android:text="@string/loading"/>

    </LinearLayout>
</RelativeLayout>
